--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
         <hr />
         <section id="Employment">
             <div class="container">
-                <h2>Employment</h2>
+                <h2>Work History</h2>
                 <ul>
                     <li>
                         <h3>Intern Junior Software Developer - Internet Brands, Inc</h3>
