--- a/index.html
+++ b/index.html
@@ -47,14 +47,27 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
                 <div class="project-card">
                     <h3>Project 1 - Mina-YellowPages</h3>
                     <p>Description of Project 2.
-                        Include technologies used and your contributions to the project.
+                       <p>Technologies used:</p>
+                            <ol>
+                                <li>Java</li>
+                                <li>MySQL</li>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                            </ol>
                     </p>
                     <img src="./assets/images/YelloPageMina.png" height="200" width="600">
                 </div>
                 <div class="project-card">
                     <h3>Project 2 - Ticketing System</h3>
-                    <p>Description of Project 2. Include technologies used and 
-                        your contributions to the project.</p>
+                    <p>Description of Project 2.
+                    <p>Technologies used:</p>
+                            <ol>
+                                <li>Java</li>
+                                <li>MySQL</li>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                            </ol>
+                    </p>
                     <img src="./assets/images/ticketing-system.png" height="200" width ="600" alt="">    
                 </div>
             </div>
