--- a/index.html
+++ b/index.html
@@ -44,30 +44,31 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
         <section id="projects">
             <div class="container">
                 <h2>Projects</h2>
-                <div class="project-card">
+               <div class="project-card">
                     <h3>Project 1 - Mina-YellowPages</h3>
-                    <p>Description of Project 2.
-                       <p>Technologies used:</p>
-                            <ol>
-                                <li>Java</li>
-                                <li>MySQL</li>
-                                <li>HTML</li>
-                                <li>CSS</li>
-                            </ol>
+                    <h4>Description of Project 1 And Technologies Used</h4>
+                    <p>    
+                        YellowPage called attractions to add places and reviews about them. 
+                        This project also includes login and signup pages that connects to SQL Database.
                     </p>
+                    <ol>
+                        <li>Java</li>
+                        <li>MySQL</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                     </ol>
                     <img src="./assets/images/YelloPageMina.png" height="200" width="600">
                 </div>
                 <div class="project-card">
                     <h3>Project 2 - Ticketing System</h3>
-                    <p>Description of Project 2.
-                    <p>Technologies used:</p>
-                            <ol>
-                                <li>Java</li>
-                                <li>MySQL</li>
-                                <li>HTML</li>
-                                <li>CSS</li>
-                            </ol>
-                    </p>
+                    <h4>Description of Project 2 And Technologies Used</h4>
+                     <p>Basic Ticketing System to create service requests, assign tickets, update, and delete them</p>
+                     <ol>
+                        <li>Java</li>
+                        <li>MySQL</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                     </ol>
                     <img src="./assets/images/ticketing-system.png" height="200" width ="600" alt="">    
                 </div>
             </div>
