--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     </nav>
     <nav class="navbar">
         <ul>
-            <li><div class="logo"><a href="file:///C:/Users/mizo2/Downloads/MyPortfolioProject/index.html">Portfo<span>lio.</span></a></div></li>
+            <li><div class="logo"><a href="https://mezoom936.github.io/My-portfolio/">Portfo<span>lio.</span></a></div></li>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
