--- a/public/contact.html
+++ b/public/contact.html
@@ -1,7 +1,7 @@
 <h1>Contact Me</h1>
 <p>Tel: 626-626-0602</p>
 <p>Email: <a href="mailto:minamekhaiel1@gmail.com">minamekhaiel1@gmail.com</a></p>
-<p>LinkedIn: <a href="https://www.linkedin.com/in/mina-mekhaiel-435760243/">LinkedIn Profile</a></p>
+<p>LinkedIn: <a href="www.linkedin.com/in/mina-mekhaiel">LinkedIn Profile</a></p>
 <p>Address:</p>
 <p>
   Covina, CA <br />
