--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
             <div class="container">
                 <div class="row col-m-12 col-lg-12">
                     <div class="about-col-1">
-                    <img src="./assets/images/mezo.jpg" alt="Myprofile">
+                    <img src="assets/images/mezo.jpg" alt="Myprofile">
                     </div>
                     <div class="about-col-2">
                     <h2 class="sub-title">About Me</h2>
