--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
                 <a href="https://www.linkedin.com/in/mina-mekhaiel/"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://www.github.com/mezoom936"><i class="fa-brands fa-square-github"></i></a>
               </div>
-              <a href="./Mina'sResume.docx" download class="btn btn2">Resume</a>  
+              <a href="assets/Mina'sResume.docx" download class="btn btn2">Resume</a>  
                 <form name="submit-to-google-sheet">
                     <input type="text" name="Name" placeholder="Your Name" required>
                     <input type="email" name="Email" placeholder="Your Email" required>
