--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
                 <div class="project-album">
                   <!-- Project 1 -->
                   <div class="project-card">
-                    <img src="path_to_project_image.jpg" alt="Project 1 Image">
+                    <img src="assets/images/y1.jpg" alt="Project 1 Image">
                     <h3>Project Title 1</h3>
                     <p>Short description of Project 1...</p>
                   </div>
