--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
                   <!-- Project 1 -->
                   <div class="project-card">
                     <img src="assets/images/y1.png" alt="Project 1 Image">
-                    <h3>Project Title 1</h3>
+                    <h3>YelloPageMina</h3>
                     <p>Short description of Project 1...</p>
                   </div>
                   <!-- Project 2 -->
