--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
                   <div class="project-card">
                     <img src="assets/images/y1.png" alt="Project 1 Image">
                     <h3>YelloPageMina</h3>
-                    <p>Short description of Project 1...</p>
+                    <p>Web Application</p>
                   </div>
                   <!-- Project 2 -->
                   <div class="project-card">
