--- a/pro-details1.html
+++ b/pro-details1.html
@@ -25,9 +25,9 @@
         <div class="nav-links" id="nav-links">
             <ul>
                 <li><div class="logo"><a class="navbar-brand" href="index.html">Portfolio</a></div></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="index.html#projects">Projects</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
             </ul>
         </div>   
     </nav>
