--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styl.css">
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="https://kit.fontawesome.com/d43d5c0b07.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="outer-nav">
@@ -128,30 +129,31 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
                     <img src="assets/images/y1.png" alt="Project 1 Image">
                     <h3>YelloPageMina</h3>
                     <p>Web Application</p>
+                    <a href="pro-details1.html" title="More Details"><i class="fa-solid fa-link"></i></a>
                   </div>
                   <!-- Project 2 -->
                   <div class="project-card">
                     <img src="path_to_project_image.jpg" alt="Project 2 Image">
                     <h3>Project Title 2</h3>
-                    <p>Short description of Project 2...</p>
+                    <a href="pro-details2.html" title="More Details"><i class="fa-solid fa-link"></i></a>
                   </div>
                   <!-- Project 3 -->
                   <div class="project-card">
                     <img src="path_to_project_image.jpg" alt="Project 2 Image">
                     <h3>Project Title 3</h3>
-                    <p>Short description of Project 3...</p>
+                    <a href="pro-details3.html" title="More Details"><i class="fa-solid fa-link"></i></a>
                   </div>
                   <!-- Project 4 -->
                   <div class="project-card">
                     <img src="path_to_project_image.jpg" alt="Project 2 Image">
                     <h3>Project Title 4</h3>
-                    <p>Short description of Project 4...</p>
+                    <a href="pro-details4.html" title="More Details"><i class="fa-solid fa-link"></i></a>
                   </div>
                   <!-- Project 5 -->
                   <div class="project-card">
                     <img src="path_to_project_image.jpg" alt="Project 2 Image">
                     <h3>Project Title 5</h3>
-                    <p>Short description of Project 5...</p>
+                    <a href="pro-details5.html" title="More Details"><i class="fa-solid fa-link"></i></a>
                   </div>
               </div>
             </div>
@@ -218,8 +220,6 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
         });
     </script>
      <script>
-        // script.js
-
         document.addEventListener('DOMContentLoaded', function() {
             const burger = document.getElementById('burger');
             const navLinks = document.getElementById('nav-links');
