--- a/pro-details1.html
+++ b/pro-details1.html
@@ -32,7 +32,7 @@
         </div>   
     </nav>
     <div class="outer-c">      
-        <video src="./assets/videos/y2.mp4" controls>
+        <video src="./assets/y2.mp4" controls>
             <track src="./assets/captions/en.vtt" kind="subtitles" srclang="en" label="English">
         </video>
 
