--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
                   <!-- Project 1 -->
                   <div class="project-card">
                     <img src="assets/images/y1.png" alt="Project 1 Image">
-                    <h3>YelloPageMina</h3>
+                    <h3>YellowPageMina</h3>
                     <p>Web Application</p>
                     <a href="pro-details1.html" title="More Details"><i class="fa-solid fa-link"></i></a>
                   </div>
