--- a/index.html
+++ b/index.html
@@ -134,25 +134,29 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
                   <!-- Project 2 -->
                   <div class="project-card">
                     <img src="assets/images/y1.png" alt="Project 2 Image">
-                    <h3>Project Title 2</h3>
+                    <h3>YellowPageMina</h3>
+                    <p>Web Application</p>
                     <a href="pro-details2.html" title="More Details"><i class="fa-solid fa-link"></i></a>
                   </div>
                   <!-- Project 3 -->
                   <div class="project-card">
                     <img src="assets/images/y1.png" alt="Project 2 Image">
-                    <h3>Project Title 3</h3>
+                    <h3>YellowPageMina</h3>
+                    <p>Web Application</p>
                     <a href="pro-details3.html" title="More Details"><i class="fa-solid fa-link"></i></a>
                   </div>
                   <!-- Project 4 -->
                   <div class="project-card">
                     <img src="assets/images/y1.png" alt="Project 2 Image">
-                    <h3>Project Title 4</h3>
+                    <h3>YellowPageMina</h3>
+                    <p>Web Application</p>
                     <a href="pro-details4.html" title="More Details"><i class="fa-solid fa-link"></i></a>
                   </div>
                   <!-- Project 5 -->
                   <div class="project-card">
                     <img src="assets/images/y1.png" alt="Project 2 Image">
-                    <h3>Project Title 5</h3>
+                    <h3>YellowPageMina</h3>
+                    <p>Web Application</p>
                     <a href="pro-details5.html" title="More Details"><i class="fa-solid fa-link"></i></a>
                   </div>
               </div>
